--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,49 @@
   abbr={arXiv},
   title={Accelerating auto-regressive text-to-image generation with training-free speculative jacobi decoding},
   author={Teng, Yao and Shi, Han and Liu, Xian and Ning, Xuefei and Dai, Guohao and Wang, Yu and Li, Zhenguo and Liu, Xihui},
-  journal={arXiv preprint arXiv:2410.01699},
+  journal={Preprint arXiv:2410.01699},
   year={2024}
 }
 
+@article{huang2024efficient,
+  abbr={arXiv},
+  title={Efficient Multi-modal Large Language Models via Visual Token Grouping},
+  author={Huang, Minbin and Huang, Runhui and Shi, Han and Chen, Yimeng and Zheng, Chuanyang and Sun, Xiangguo and Jiang, Xin and Li, Zhenguo and Cheng, Hong},
+  journal={Preprint arXiv:2411.17773},
+  year={2024}
+}
+
+@article{zheng2024dape,
+  abbr={arXiv},
+  title={DAPE V2: Process Attention Score as Feature Map for Length Extrapolation},
+  author={Zheng, Chuanyang and Gao, Yihang and Shi, Han and Xiong, Jing and Sun, Jiankai and Li, Jingyao and Huang, Minbin and Ren, Xiaozhe and Ng, Michael and Jiang, Xin and others},
+  journal={preprint arXiv:2410.04798},
+  year={2024}
+}
+
+@inproceedings{zheng2024dape,
+  abbr={NeurIPS},
+  title={Dape: Data-adaptive positional encoding for length extrapolation},
+  author={Zheng, Chuanyang and Gao, Yihang and Shi, Han and Huang, Minbin and Li, Jingyao and Xiong, Jing and Ren, Xiaozhe and Ng, Michael and Jiang, Xin and Li, Zhenguo and others},
+  booktitle={The Thirty-eighth Annual Conference on Neural Information Processing Systems},
+  year={2024}
+}
+
+
+
+@inproceedings{jiang2024forward,
+  abbr={Findings of ACL},
+  title={Forward-backward reasoning in large language models for mathematical verification},
+  author={Jiang, Weisen and Shi, Han and Yu, Longhui and Liu, Zhengying and Zhang, Yu and Li, Zhenguo and Kwok, James},
+  booktitle={Findings of the Association for Computational Linguistics ACL 2024},
+  pages={6647--6661},
+  year={2024}
+}
+
+@article{li2024quickllama,
+  abbr={arXiv},
+  title={QuickLLaMA: Query-aware Inference Acceleration for Large Language Models},
+  author={Li, Jingyao and Shi, Han and Jiang, Xin and Li, Zhenguo and Xu, Hong and Jia, Jiaya},
+  journal={Preprint arXiv:2406.07528},
+  year={2024}
+}
