--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,18 +26,16 @@
   abbr={NeurIPS},
   title={Dape: Data-adaptive positional encoding for length extrapolation},
   author={Zheng, Chuanyang and Gao, Yihang and Shi, Han and Huang, Minbin and Li, Jingyao and Xiong, Jing and Ren, Xiaozhe and Ng, Michael and Jiang, Xin and Li, Zhenguo and others},
-  booktitle={The Thirty-eighth Annual Conference on Neural Information Processing Systems},
+  booktitle={Neural Information Processing Systems},
   year={2024}
 }
 
 
-
-@inproceedings{jiang2024forward,
-  abbr={Findings of ACL},
-  title={Forward-backward reasoning in large language models for mathematical verification},
-  author={Jiang, Weisen and Shi, Han and Yu, Longhui and Liu, Zhengying and Zhang, Yu and Li, Zhenguo and Kwok, James},
-  booktitle={Findings of the Association for Computational Linguistics ACL 2024},
-  pages={6647--6661},
+@inproceedings{ye2024diffusion,
+  abbr={NeurIPS},
+  title={Diffusion of thoughts: Chain-of-thought reasoning in diffusion language models},
+  author={Ye, Jiacheng and Gong, Shansan and Chen, Liheng and Zheng, Lin and Gao, Jiahui and Shi, Han and Wu, Chuan and Jiang, Xin and Li, Zhenguo and Bi, Wei and others},
+  booktitle={Neural Information Processing Systems},
   year={2024}
 }
 
@@ -48,3 +46,29 @@
   journal={Preprint arXiv:2406.07528},
   year={2024}
 }
+
+@article{teng2024dim,
+  abbr={arXiv},
+  title={DiM: Diffusion Mamba for Efficient High-Resolution Image Synthesis},
+  author={Teng, Yao and Wu, Yue and Shi, Han and Ning, Xuefei and Dai, Guohao and Wang, Yu and Li, Zhenguo and Liu, Xihui},
+  journal={Preprint arXiv:2405.14224},
+  year={2024}
+}
+
+@inproceedings{jiang2024forward,
+  abbr={Findings of ACL},
+  title={Forward-backward reasoning in large language models for mathematical verification},
+  author={Jiang, Weisen and Shi, Han and Yu, Longhui and Liu, Zhengying and Zhang, Yu and Li, Zhenguo and Kwok, James},
+  booktitle={Findings of the Association for Computational Linguistics ACL 2024},
+  pages={6647--6661},
+  year={2024}
+}
+
+@article{gao2024expressive,
+  abbr={arXiv},
+  title={On the expressive power of a variant of the looped transformer},
+  author={Gao, Yihang and Zheng, Chuanyang and Xie, Enze and Shi, Han and Hu, Tianyang and Li, Yu and Ng, Michael K and Li, Zhenguo and Liu, Zhaoqiang},
+  journal={Preprint arXiv:2402.13572},
+  year={2024}
+}
+
