--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -72,3 +72,12 @@
   year={2024}
 }
 
+
+@inproceedings{yumetamath,
+  abbr={ICLR},
+  abbr2={Spotlight},
+  title={MetaMath: Bootstrap Your Own Mathematical Questions for Large Language Models},
+  author={Yu, Longhui and Jiang, Weisen and Shi, Han and Jincheng, YU and Liu, Zhengying and Zhang, Yu and Kwok, James and Li, Zhenguo and Weller, Adrian and Liu, Weiyang},
+  booktitle={International Conference on Learning Representations},
+  year={2024}
+}
