--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -81,3 +81,37 @@
   booktitle={International Conference on Learning Representations},
   year={2024}
 }
+
+@inproceedings{wanglego,
+  abbr={ICLR},
+  abbr2={Oral},
+  title={LEGO-Prover: Neural Theorem Proving with Growing Libraries},
+  author={Wang, Haiming and Xin, Huajian and Zheng, Chuanyang and Liu, Zhengying and Cao, Qingxing and Huang, Yinya and Xiong, Jing and Shi, Han and Xie, Enze and Yin, Jian and others},
+  booktitle={International Conference on Learning Representations},
+  year={2024}
+}
+
+@inproceedings{wang2023dt,
+  abbr={ACL},
+  title={Dt-solver: Automated theorem proving with dynamic-tree sampling guided by proof-level value function},
+  author={Wang, Haiming and Yuan, Ye and Liu, Zhengying and Shen, Jianhao and Yin, Yichun and Xiong, Jing and Xie, Enze and Shi, Han and Li, Yujun and Li, Lin and others},
+  booktitle={The Association for Computational Linguistics},
+  year={2023}
+}
+
+@inproceedings{deng2023growclip,
+  abbr={ICCV},
+  title={Growclip: Data-aware automatic model growing for large-scale contrastive language-image pre-training},
+  author={Deng, Xinchi and Shi, Han and Huang, Runhui and Li, Changlin and Xu, Hang and Han, Jianhua and Kwok, James and Zhao, Shen and Zhang, Wei and Liang, Xiaodan},
+  booktitle={International Conference on Computer Vision},
+  year={2023}
+}
+
+@inproceedings{xie2023difffit,
+  abbr={ICCV},
+  abbr2={Oral},
+  title={Difffit: Unlocking transferability of large diffusion models via simple parameter-efficient fine-tuning},
+  author={Xie, Enze and Yao, Lewei and Shi, Han and Liu, Zhili and Zhou, Daquan and Liu, Zhaoqiang and Li, Jiawei and Li, Zhenguo},
+  booktitle={International Conference on Computer Vision},
+  year={2023}
+}
