--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -95,7 +95,16 @@
   abbr={ACL},
   title={Dt-solver: Automated theorem proving with dynamic-tree sampling guided by proof-level value function},
   author={Wang, Haiming and Yuan, Ye and Liu, Zhengying and Shen, Jianhao and Yin, Yichun and Xiong, Jing and Xie, Enze and Shi, Han and Li, Yujun and Li, Lin and others},
-  booktitle={The Association for Computational Linguistics},
+  booktitle={Association for Computational Linguistics},
+  year={2023}
+}
+
+@inproceedings{xie2023difffit,
+  abbr={ICCV},
+  abbr2={Oral},
+  title={Difffit: Unlocking transferability of large diffusion models via simple parameter-efficient fine-tuning},
+  author={Xie, Enze and Yao, Lewei and Shi, Han and Liu, Zhili and Zhou, Daquan and Liu, Zhaoqiang and Li, Jiawei and Li, Zhenguo},
+  booktitle={International Conference on Computer Vision},
   year={2023}
 }
 
@@ -107,11 +116,51 @@
   year={2023}
 }
 
-@inproceedings{xie2023difffit,
-  abbr={ICCV},
-  abbr2={Oral},
-  title={Difffit: Unlocking transferability of large diffusion models via simple parameter-efficient fine-tuning},
-  author={Xie, Enze and Yao, Lewei and Shi, Han and Liu, Zhili and Zhou, Daquan and Liu, Zhaoqiang and Li, Jiawei and Li, Zhenguo},
-  booktitle={International Conference on Computer Vision},
-  year={2023}
+@inproceedings{yang2022continual,
+  abbr={CVPR},
+  title={Continual object detection via prototypical task correlation guided gating mechanism},
+  author={Yang, Binbin and Deng, Xinchi and Shi, Han and Li, Changlin and Zhang, Gengwei and Xu, Hang and Zhao, Shen and Lin, Liang and Liang, Xiaodan},
+  booktitle={Computer Vision and Pattern Recognition},
+  year={2022}
+}
+
+@inproceedings{shirevisiting,
+  abbr={ICLR},
+  title={Revisiting Over-smoothing in BERT from the Perspective of Graph},
+  author={Shi, Han and Gao, Jiahui and Xu, Hang and Liang, Xiaodan and Li, Zhenguo and Kong, Lingpeng and Lee, Stephen MS and Kwok, James},
+  booktitle={International Conference on Learning Representations},
+  year={2022}
+}
+
+@inproceedings{gao2022autobert,
+  abbr={AAAI},
+  title={Autobert-zero: Evolving bert backbone from scratch},
+  author={Gao, Jiahui and Xu, Hang and Shi, Han and Ren, Xiaozhe and Philip, LH and Liang, Xiaodan and Jiang, Xin and Li, Zhenguo},
+  booktitle={AAAI Conference on Artificial Intelligence},
+  year={2022}
+}
+
+@inproceedings{shi2021sparsebert,
+  abbr={ICML},
+  title={Sparsebert: Rethinking the importance analysis in self-attention},
+  author={Shi, Han and Gao, Jiahui and Ren, Xiaozhe and Xu, Hang and Liang, Xiaodan and Li, Zhenguo and Kwok, James Tin-Yau},
+  booktitle={International Conference on Machine Learning},
+  year={2021}
+}
+
+@inproceedings{shi2020effective,
+  abbr={AAAI},
+  title={Effective decoding in graph auto-encoder using triadic closure},
+  author={Shi, Han and Fan, Haozheng and Kwok, James T},
+  booktitle={AAAI Conference on Artificial Intelligence},
+  year={2020}
+}
+
+
+@article{shi2020bridging,
+  abbr={NeurIPS},
+  title={Bridging the gap between sample-based and one-shot neural architecture search with bonas},
+  author={Shi, Han and Pi, Renjie and Xu, Hang and Li, Zhenguo and Kwok, James and Zhang, Tong},
+  journal={Neural Information Processing Systems},
+  year={2020}
 }
