--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,7 +59,7 @@
   abbr={Findings of ACL},
   title={Forward-backward reasoning in large language models for mathematical verification},
   author={Jiang, Weisen and Shi, Han and Yu, Longhui and Liu, Zhengying and Zhang, Yu and Li, Zhenguo and Kwok, James},
-  booktitle={Findings of the Association for Computational Linguistics ACL 2024},
+  booktitle={Findings of the Association for Computational Linguistics},
   pages={6647--6661},
   year={2024}
 }
