--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 @inproceedings{zheng2024dape,
   abbr={NeurIPS},
-  title={Dape: Data-adaptive positional encoding for length extrapolation},
+  title={DAPE: Data-Adaptive Positional Encoding for Length Extrapolation},
   author={Zheng, Chuanyang and Gao, Yihang and Shi, Han and Huang, Minbin and Li, Jingyao and Xiong, Jing and Ren, Xiaozhe and Ng, Michael and Jiang, Xin and Li, Zhenguo and others},
   booktitle={Neural Information Processing Systems},
   year={2024}
@@ -9,7 +9,7 @@
 
 @inproceedings{ye2024diffusion,
   abbr={NeurIPS},
-  title={Diffusion of thoughts: Chain-of-thought reasoning in diffusion language models},
+  title={Diffusion of Thoughts: Chain-of-Thought Reasoning in Diffusion Language Models},
   author={Ye, Jiacheng and Gong, Shansan and Chen, Liheng and Zheng, Lin and Gao, Jiahui and Shi, Han and Wu, Chuan and Jiang, Xin and Li, Zhenguo and Bi, Wei and others},
   booktitle={Neural Information Processing Systems},
   year={2024}
@@ -37,16 +37,15 @@
 
 @inproceedings{jiang2024forward,
   abbr={Findings of ACL},
-  title={Forward-backward reasoning in large language models for mathematical verification},
+  title={Forward-Backward Reasoning in Large Language Models for Mathematical Verification},
   author={Jiang, Weisen and Shi, Han and Yu, Longhui and Liu, Zhengying and Zhang, Yu and Li, Zhenguo and Kwok, James},
   booktitle={Findings of the Association for Computational Linguistics},
-  pages={6647--6661},
   year={2024}
 }
 
 @article{teng2024accelerating,
   abbr={arXiv},
-  title={Accelerating auto-regressive text-to-image generation with training-free speculative jacobi decoding},
+  title={Accelerating Auto-regressive Text-to-Image Generation with Training-free Speculative Jacobi Decoding},
   author={Teng, Yao and Shi, Han and Liu, Xian and Ning, Xuefei and Dai, Guohao and Wang, Yu and Li, Zhenguo and Liu, Xihui},
   journal={Preprint arXiv:2410.01699},
   year={2024}
@@ -88,7 +87,7 @@
 
 @article{gao2024expressive,
   abbr={arXiv},
-  title={On the expressive power of a variant of the looped transformer},
+  title={On the Expressive Power of a Variant of the Looped Transformer},
   author={Gao, Yihang and Zheng, Chuanyang and Xie, Enze and Shi, Han and Hu, Tianyang and Li, Yu and Ng, Michael K and Li, Zhenguo and Liu, Zhaoqiang},
   journal={Preprint arXiv:2402.13572},
   year={2024}
@@ -99,7 +98,7 @@
 
 @inproceedings{wang2023dt,
   abbr={ACL},
-  title={Dt-solver: Automated theorem proving with dynamic-tree sampling guided by proof-level value function},
+  title={DT-Solver: Automated Theorem Proving with Dynamic-Tree Sampling Guided by Proof-level Value Function},
   author={Wang, Haiming and Yuan, Ye and Liu, Zhengying and Shen, Jianhao and Yin, Yichun and Xiong, Jing and Xie, Enze and Shi, Han and Li, Yujun and Li, Lin and others},
   booktitle={Association for Computational Linguistics},
   year={2023}
@@ -108,7 +107,7 @@
 @inproceedings{xie2023difffit,
   abbr={ICCV},
   abbr2={Oral},
-  title={Difffit: Unlocking transferability of large diffusion models via simple parameter-efficient fine-tuning},
+  title={DiffFit: Unlocking Transferability of Large Diffusion Models via Simple Parameter-Efficient Fine-Tuning},
   author={Xie, Enze and Yao, Lewei and Shi, Han and Liu, Zhili and Zhou, Daquan and Liu, Zhaoqiang and Li, Jiawei and Li, Zhenguo},
   booktitle={International Conference on Computer Vision},
   year={2023}
@@ -116,7 +115,7 @@
 
 @inproceedings{deng2023growclip,
   abbr={ICCV},
-  title={Growclip: Data-aware automatic model growing for large-scale contrastive language-image pre-training},
+  title={GrowCLIP: Data-aware Automatic Model Growing for Large-scale Contrastive Language-Image Pre-training},
   author={Deng, Xinchi and Shi, Han and Huang, Runhui and Li, Changlin and Xu, Hang and Han, Jianhua and Kwok, James and Zhao, Shen and Zhang, Wei and Liang, Xiaodan},
   booktitle={International Conference on Computer Vision},
   year={2023}
@@ -124,7 +123,7 @@
 
 @inproceedings{yang2022continual,
   abbr={CVPR},
-  title={Continual object detection via prototypical task correlation guided gating mechanism},
+  title={Continual Object Detection via Prototypical Task Correlation Guided Gating Mechanism},
   author={Yang, Binbin and Deng, Xinchi and Shi, Han and Li, Changlin and Zhang, Gengwei and Xu, Hang and Zhao, Shen and Lin, Liang and Liang, Xiaodan},
   booktitle={Computer Vision and Pattern Recognition},
   year={2022}
@@ -140,7 +139,7 @@
 
 @inproceedings{gao2022autobert,
   abbr={AAAI},
-  title={Autobert-zero: Evolving bert backbone from scratch},
+  title={AutoBERT-Zero: Evolving BERT Backbone from Scratch},
   author={Gao, Jiahui and Xu, Hang and Shi, Han and Ren, Xiaozhe and Philip, LH and Liang, Xiaodan and Jiang, Xin and Li, Zhenguo},
   booktitle={AAAI Conference on Artificial Intelligence},
   year={2022}
@@ -148,7 +147,7 @@
 
 @inproceedings{shi2021sparsebert,
   abbr={ICML},
-  title={Sparsebert: Rethinking the importance analysis in self-attention},
+  title={SparseBERT: Rethinking the Importance Analysis in Self-attention},
   author={Shi, Han and Gao, Jiahui and Ren, Xiaozhe and Xu, Hang and Liang, Xiaodan and Li, Zhenguo and Kwok, James Tin-Yau},
   booktitle={International Conference on Machine Learning},
   year={2021}
@@ -157,7 +156,7 @@
 
 @article{shi2020bridging,
   abbr={NeurIPS},
-  title={Bridging the gap between sample-based and one-shot neural architecture search with bonas},
+  title={Bridging the Gap between Sample-based and One-shot Neural Architecture Search with BONAS},
   author={Shi, Han and Pi, Renjie and Xu, Hang and Li, Zhenguo and Kwok, James and Zhang, Tong},
   journal={Neural Information Processing Systems},
   year={2020}
@@ -165,7 +164,7 @@
 
 @inproceedings{shi2020effective,
   abbr={AAAI},
-  title={Effective decoding in graph auto-encoder using triadic closure},
+  title={Effective Decoding in Graph Auto-Encoder using Triadic Closure},
   author={Shi, Han and Fan, Haozheng and Kwok, James T},
   booktitle={AAAI Conference on Artificial Intelligence},
   year={2020}
