--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @article{chen2024sepllm,
   abbr={arXiv},
   title={SepLLM: Accelerate Large Language Models by Compressing One Segment into One Token},
-  author={Chen, Guoxuan and Shi, Han and Li, Jiawei and Ren, Xiaozhe and Chen, Yimeng and Jiang, Xin and Li, Zhenguo and Liu, Weiyang and Huang, Chao},
+  author={Chen, Guoxuan and Shi, Han‡ and Li, Jiawei and Ren, Xiaozhe and Chen, Yimeng and Jiang, Xin and Li, Zhenguo and Liu, Weiyang and Huang, Chao},
   journal={Preprint arXiv:2412.12094},
   selected={true},
   year={2024}
@@ -31,7 +31,7 @@
   abbr={ICLR},
   abbr2={Spotlight},
   title={MetaMath: Bootstrap Your Own Mathematical Questions for Large Language Models},
-  author={Yu, Longhui and Jiang, Weisen and Shi, Han and Jincheng, YU and Liu, Zhengying and Zhang, Yu and Kwok, James and Li, Zhenguo and Weller, Adrian and Liu, Weiyang},
+  author={Yu, Longhui and Jiang, Weisen and Shi, Han‡ and Jincheng, YU and Liu, Zhengying and Zhang, Yu and Kwok, James and Li, Zhenguo and Weller, Adrian and Liu, Weiyang},
   booktitle={International Conference on Learning Representations},
   selected={true},
   year={2024}
