--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @article{chen2024sepllm,
   abbr={arXiv},
   title={SepLLM: Accelerate Large Language Models by Compressing One Segment into One Token},
-  author={Chen, Guoxuan and Shi‡, Han and Li, Jiawei and Ren, Xiaozhe and Chen, Yimeng and Jiang, Xin and Li, Zhenguo and Liu, Weiyang and Huang, Chao},
+  author={Chen, Guoxuan and Shi‡, Han and Li, Jiawei and Gao, Yihang and Ren, Xiaozhe and Chen, Yimeng and Jiang, Xin and Li, Zhenguo and Liu, Weiyang and Huang, Chao},
   journal={Preprint arXiv:2412.12094},
   selected={true},
   year={2024}
