--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -80,12 +80,12 @@
   year={2024}
 }
 
-@article{li2024quickllama,
-  abbr={arXiv},
+@inproceedings{li2024quickllama,
+  abbr={COLING},
   title={QuickLLaMA: Query-aware Inference Acceleration for Large Language Models},
   author={Li, Jingyao and Shi, Han and Jiang, Xin and Li, Zhenguo and Xu, Hong and Jia, Jiaya},
-  journal={Preprint arXiv:2406.07528},
-  year={2024}
+  booktitle={ International Conference on Computational Linguistics},
+  year={2025}
 }
 
 @article{teng2024dim,
